fix horizontal scroll

--- a/styles/common_styles.scss
+++ b/styles/common_styles.scss
@@ -7,7 +7,7 @@ body {
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .app-wrapper {
